New in version 0.3.1
====================
- Bugfixes
  + config file parser reads all sections
  + KDE session detection based on environment varibales,
    as suggested by KDE upstream.
- KDE configuration module is the first module in C++ and
  now links to libkdecore4 in order to properly detect the
  configuration folder for kde.
- At the moment we're not compatible with KDE3. Sorry.
- .NET bindings can now properly be installed and it should
  be possible for packagers to provide them.

New in version 0.3.0
====================
* WARNING!!! Slight API change!!! see docs 
  for px_proxy_factory_get_proxies()
* Credentials support (see API change above)
* A complete rewrite of the module manager
* file:// as valid PAC URLs
* Sample Mono application
* Automake 1.11 shaved output
* gnome backend rewrite (now w/o thread issues)
* Test suite base functionality exists
* Many solaris build fixes
* Seamonkey support as JS pacrunner
* Bugfixes
* Compiles for MS Windows using Mingw